[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contentconvertor"
version = "0.0.2"
authors = [
  { name="Léo Leducq", email="iziatask@gmail.com" },
]

description = "Converts content from Twitter to a png image that can be uploaded to Instagram"
long_description = "DESCRIPTION.txt"
readme = "README.md"
requires-python = ">=3.7"

depencies = [
    credentials==1.1,
    Pillow==9.3.0,
    tweepy==4.12.1,
    tweet_capture==0.1.7
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: French",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"GitHub" = "https://github.com/leoleducq/Content-Convertor"