[metadata]
name = contentconvertor
version = 0.1.5
description = Converti des tweets en images pour Instagram
long_description = file:README.md
long_description_content_type = text/markdown
author = Léo Leducq
author_email = iziatask@gmail.com
license = MIT
license_files = LICENSE
url = https://github.com/leoleducq/Content-Convertor

keywords =
    instagram
    twitter
    content
    convertor

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Other Audience
    License :: OSI Approved :: MIT License
    Natural Language :: French
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

project_urls =
    Source Code = https://github.com/leoleducq/Content-Convertor
    Bug Tracker = https://github.com/leoleducq/Content-Convertor/issues

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.9
install_requires =
    Pillow           ==  9.3.0
    tweepy           ==  4.12.1
    tweet_capture    ==  0.1.7


[options.packages.find]
where = src